--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-dash-seeder
+racecoin-seeder
 ==============
 
-dash-seeder is a crawler for the Dash network, which exposes a list
+racecoin-seeder is a crawler for the Race network, which exposes a list
 of reliable nodes via a built-in DNS server.
 
 Features:
